# WiiHID_Trinkey-QT2040.cpy

./: README.md  boot.py  circup-reqs.txt  code.py  main.py  pyproject.toml  sync.sh
lib/: Gamepad.py
